--- a/pages/8880.html
+++ b/pages/8880.html
@@ -3,15 +3,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Jon  Beck in nLab
+      Jon Beck in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,19 +283,18 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Jon  Beck
+      Jon Beck
   </h1>
 
 
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8813/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Jon Mock Beck was a category theorist whose thesis (under the supervision of <a class='existingWikiWord' href='/nlab/show/Samuel+Eilenberg'>Sammy Eilenberg</a>) and subsequent work with <a class='existingWikiWord' href='/nlab/show/Michael+Barr'>Mike Barr</a> has been highly influention in the devlopment of the subject. He died in March 2006.</p>
+      <p>Jon Mock Beck was a category theorist whose thesis (under the supervision of <a class='existingWikiWord' href='/nlab/show/Sammy+Eilenberg'>Sammy Eilenberg</a>) and subsequent work with <a class='existingWikiWord' href='/nlab/show/Mike+Barr'>Mike Barr</a> has been highly influention in the devlopment of the subject. He died in March 2006.</p>
 
 <ul>
 <li>
@@ -319,34 +318,27 @@ margin-left: 0em;
 <p><a href='http://www.tac.mta.ca/tac/reprints/articles/2/tr2abs.html'>thesis</a></p>
 </li>
 </ul>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
-
-<p>
- 
-</p>
-
-<p>
-</p>
+<div class='property'>category: <a class='category_link' href='/nlab/all_pages/people'>people</a></div>
 </div>
 
 <div class="revisedby">
-  Revised on August  5, 2013 13:49:44 
-  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
-  (95.147.236.46)
+  <p>
+  Last revised on August  2, 2018 at 14:40:50.
+  See the <a href="https://ncatlab.org/nlab/history/Jon Beck" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jon++Beck" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jon++Beck/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Jon++Beck" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jon++Beck" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Jon+Beck" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jon+Beck/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Jon+Beck" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jon+Beck" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Jon Beck/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
-    <a href="/nlab/print/Jon++Beck" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
-    <a href="/nlab/tex/Jon++Beck" id="view_tex" rel="nofollow">TeX</a>
+    | Views:
+    <a href="/nlab/print/Jon+Beck" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/source/Jon++Beck" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/tex/Jon+Beck" id="view_tex" rel="nofollow">TeX</a>
+    |
+    <a href="/nlab/source/Jon+Beck" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
