--- a/pages/1096.html
+++ b/pages/1096.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,27 +307,28 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>The notion of <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a> today is technically synonymous with (<a class='existingWikiWord' href='/nlab/show/contravariant+functor'>contravariant</a>) [[functor] <math class='maruku-mathml' display='inline' id='mathml_60849d615b15f80a641407e460431cb3c1d9220c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><msup><mi>S</mi> <mi>op</mi></msup><mo>→</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>F : S^{op} \to A</annotation></semantics></math> – albeit a functor is called a <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a> only if it is being used in a certain way, notably when its domain has the structure of a <a class='existingWikiWord' href='/nlab/show/site'>site</a> and there is the potential to consider the <a class='existingWikiWord' href='/nlab/show/sheafification'>sheafification</a> of the functor to a <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaf</a>.</p>
+      <p>The notion of <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a> today is technically synonymous with (<a class='existingWikiWord' href='/nlab/show/contravariant+functor'>contravariant</a>) <a class='existingWikiWord' href='/nlab/show/functor'>functor</a> <math class='maruku-mathml' display='inline' id='mathml_5d344e890ed0ab6a508d7ef4ddd59b3833a5b9d7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><msup><mi>S</mi> <mi>op</mi></msup><mo>→</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>F : S^{op} \to A</annotation></semantics></math> – albeit a functor is called a <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a> only if it is being used in a certain way, notably when its domain has the structure of a <a class='existingWikiWord' href='/nlab/show/site'>site</a> and there is the potential to consider the <a class='existingWikiWord' href='/nlab/show/sheafification'>sheafification</a> of the functor to a <a class='existingWikiWord' href='/nlab/show/sheaf'>sheaf</a>.</p>
 
-<p>Historically this formalization was abstracted from the special case where the domain category <math class='maruku-mathml' display='inline' id='mathml_60849d615b15f80a641407e460431cb3c1d9220c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>=</mo><mi>O</mi><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>S = O(X)</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/category+of+open+subsets'>category of open subsets</a> of a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a>.</p>
+<p>Historically this formalization was abstracted from the special case where the domain category <math class='maruku-mathml' display='inline' id='mathml_5d344e890ed0ab6a508d7ef4ddd59b3833a5b9d7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo>=</mo><mi>O</mi><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>S = O(X)</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/category+of+open+subsets'>category of open subsets</a> of a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a>.</p>
 
 <p>(…say more…)</p>
 </div>
 
 <div class="revisedby">
-  Created on March 31, 2009 12:29:46 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (134.100.222.156)
+  <p>
+  Last revised on August  2, 2018 at 16:15:01.
+  See the <a href="https://ncatlab.org/nlab/history/presheaf on open subsets" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/presheaf+on+open+subsets" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
-  
+  <a href="/nlab/edit/presheaf+on+open+subsets" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/presheaf+on+open+subsets/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/presheaf+on+open+subsets" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/presheaf+on+open+subsets" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/presheaf on open subsets/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/presheaf+on+open+subsets" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/presheaf+on+open+subsets" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/presheaf+on+open+subsets" id="view_source" rel="nofollow">Source</a>
