--- a/pages/8220.html
+++ b/pages/8220.html
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
-<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -1041,7 +1041,25 @@ margin-left: 0em;
 </li>
 </ul></div>
 </div>
-</div><h1 id='contents'>Contents</h1><p><span class='newWikiWord'>!table_of_contents<a href='/nlab/new/%21table_of_contents'>?</a></span></p><p><em>Cosmology</em> is the study of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> on its largest <a class='existingWikiWord' href='/nlab/show/length+scale'>scales</a>.</p><h2 id='related_entries'>Related entries</h2><ul>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#related_entries'>Related entries</a></li>
+<li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#in_terms_of_aqft_on_curved_spacetimes'>In terms of AQFT on curved spacetimes</a></li>
+</ul>
+</ul>
+</div>
+
+<p><em>Cosmology</em> is the study of the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a> on its largest <a class='existingWikiWord' href='/nlab/show/length+scale'>scales</a>.</p>
+
+<h2 id='related_entries'>Related entries</h2>
+
+<ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></p>
 </li>
@@ -1099,6 +1117,14 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+compactification'>Kaluza-Klein compactification</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Randall-Sundrum+model'>Randall-Sundrum model</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/brane+gas+cosmology'>brane gas cosmology</a></p>
 </li>
 
@@ -1109,7 +1135,13 @@ margin-left: 0em;
 <li>
 <p><a href='string+theory+FAQ#InsightsIntoCosmology'>string theory FAQ – Does string theory tell us anything about cosmology?</a></p>
 </li>
-</ul><h2 id='references'>References</h2><h3 id='general'>General</h3><ul>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<h3 id='general'>General</h3>
+
+<ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/John+Peacock'>John Peacock</a>, <em>Cosmological Physics</em>, Cambridge University Press (<a href='http://www.roe.ac.uk/~jap/book.html'>web</a>)</p>
 </li>
@@ -1129,7 +1161,13 @@ margin-left: 0em;
 <li>
 <p>Ned Wright, <em><a href='http://www.astro.ucla.edu/~wright/cosmolog.htm'>Cosmology tutorial</a></em></p>
 </li>
-</ul><h3 id='in_terms_of_aqft_on_curved_spacetimes'>In terms of AQFT on curved spacetimes</h3><p>Discussion of cosmology in terms of <span class='newWikiWord'>perturbative AQFT<a href='/nlab/new/perturbative+AQFT'>?</a></span> <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a> includes the following:</p><ul>
+</ul>
+
+<h3 id='in_terms_of_aqft_on_curved_spacetimes'>In terms of AQFT on curved spacetimes</h3>
+
+<p>Discussion of cosmology in terms of <a class='existingWikiWord' href='/nlab/show/perturbative+AQFT'>perturbative AQFT</a> <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a> includes the following:</p>
+
+<ul>
 <li id='FredenhagenHack13'>
 <p><a class='existingWikiWord' href='/nlab/show/Klaus+Fredenhagen'>Klaus Fredenhagen</a>, <a class='existingWikiWord' href='/nlab/show/Thomas-Paul+Hack'>Thomas-Paul Hack</a>, <em>Quantum field theory on curved spacetime and the standard cosmological model</em> (<a href='https://arxiv.org/abs/1308.6773'>arXiv:1308.6773</a>)</p>
 </li>
@@ -1146,14 +1184,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 29, 2018 at 15:36:23.
+  Last revised on August  3, 2018 at 11:50:29.
   See the <a href="https://ncatlab.org/nlab/history/cosmology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmology/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmology/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cosmology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
